--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,5 +17,7 @@
         </activity>
     </application>
     <uses-permission android:name="android.permission.INTERNET"></uses-permission> // add internet permissions
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/> // add gps permissions
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/> // add wifi permissions
 
 </manifest>
